--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
 
         <meta-data
             android:name="com.google.mlkit.vision.DEPENDENCIES"
-            android:value="ocr" />
+            android:value="face" />
         <!-- To use multiple models: android:value="ocr,model2,model3" -->
 
         <activity android:name=".FaceDActivity"></activity>
